Fix profile text font size on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -840,6 +840,12 @@ input[type="submit"]:hover {
     }
 }
 
+@media (max-width: 767px) {
+    .profile-anchor {
+        font-size: 11px;
+    }
+}
+
 .map {
     text-align: center;
 }
